--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:background="#C0CCDA">
+                android:background="@color/myBackground">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -105,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#FFC82C"
+        android:background="@color/myYellow"
         android:text="Proceed to Payment"
         android:layout_marginVertical="10dp"
     />
