--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -20,7 +20,7 @@
         android:layout_height="30dp"
         android:layout_alignTop="@id/customize"
         android:layout_centerHorizontal="true"
-        android:background="#F69500">
+        android:background="@color/myYellow">
 
         <TextView
             android:layout_width="wrap_content"
