--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#343F4B</color>
+    <color name="colorPrimaryDark">#343F4B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="myBackground">#c0ccd4</color>
+    <color name="myYellow">#ffc82c</color>
+    <color name="white">#ffffff</color>
 </resources>
