cart and orders with dummy data

--- a/app/src/main/res/layout/food_listitem.xml
+++ b/app/src/main/res/layout/food_listitem.xml
@@ -1,38 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-              android:id="@+id/fooditem"
+              android:id="@+id/name_order"
               android:text="Dosa"
               android:textStyle="bold"
-              android:textSize="25sp"
+              android:textSize="20sp"
               android:textColor="#000000"
               android:layout_margin="10dp"
     />
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-              android:layout_alignTop="@+id/fooditem"
+              android:layout_alignTop="@+id/name_order"
               android:text="X 2"
               android:textStyle="normal"
-              android:textSize="22sp"
+              android:textSize="18sp"
               android:layout_marginHorizontal="10dp"
               android:layout_marginTop="5dp"
-              android:layout_toEndOf="@id/fooditem"
+              android:layout_toEndOf="@id/name_order"
+              android:id="@+id/quantity_order"
 
 
     />
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
-              android:layout_alignTop="@+id/fooditem"
+              android:layout_alignTop="@+id/name_order"
               android:text="60"
-              android:textSize="25sp"
+              android:textSize="20sp"
               android:layout_marginTop="5dp"
               android:layout_marginHorizontal="10dp"
               android:textStyle="bold"
               android:textColor="#000000"
+              android:id="@+id/price_order"
 
     />
 
