--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="myBackground">#c0ccd4</color>
     <color name="myYellow">#ffc82c</color>
     <color name="white">#ffffff</color>
+    <color name="darkblue">#343F4B</color>
 </resources>
