--- a/app/src/main/res/layout/current_order.xml
+++ b/app/src/main/res/layout/current_order.xml
@@ -8,6 +8,7 @@
 
     <android.support.v7.widget.CardView android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:layout_centerInParent="true"
                                         android:layout_margin="15dp">
 
      <RelativeLayout android:layout_width="match_parent"
@@ -53,12 +54,20 @@
                                             android:layout_height="wrap_content"
                                             android:layout_below="@+id/time"
                                             android:layout_marginTop="25dp"
+                                            android:id="@+id/recycler_current_order"
 
 
     >
 
         <!--list of food items-->
     </android.support.v7.widget.RecyclerView>
+
+     <ListView android:layout_width="match_parent" android:layout_height="wrap_content"
+     android:layout_below="@+id/recycler_current_order"
+               android:id="@+id/list_current_order"
+     >
+
+     </ListView>
 
      </RelativeLayout>
     </android.support.v7.widget.CardView>
