--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--wrap content and match parent doesn't work on this relative layout-->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="300dp"
                 android:background="@color/myBackground">
 
 <!--this will be the single item in the list of previous orders-->
 
-    <android.support.v7.widget.CardView android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_margin="15dp">
 
