--- a/app/src/main/res/layout/previous_order.xml
+++ b/app/src/main/res/layout/previous_order.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="60dp"
                 android:background="@color/myBackground">
+
+
 
     <android.support.v7.widget.RecyclerView android:id="@+id/recycler_prev"
                                             android:layout_width="match_parent"
-                                            android:layout_height="wrap_content"
+                                            android:layout_height="match_parent"
                                             >
 
     <!-- list of orders-->
