--- a/app/src/main/res/layout/newmenu.xml
+++ b/app/src/main/res/layout/newmenu.xml
@@ -282,10 +282,10 @@ android:layout_marginRight="20dp"
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="225dp"
-
-        android:layout_marginStart="8dp"
+        android:id="@+id/recycler_menu"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
