icons and checkout

--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -105,7 +105,7 @@
 
 
     <Button
-        android:id="@+id/pay"
+        android:id="@+id/pay_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
