--- a/app/src/main/res/menu/nav.xml
+++ b/app/src/main/res/menu/nav.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/nav_menu"
-          android:icon="@mipmap/ic_launcher"
+          android:icon="@drawable/home"
           android:title="Menu"/>
 
     <item android:id="@+id/nav_cart"
-          android:icon="@mipmap/ic_launcher"
+          android:icon="@drawable/cart"
           android:title="Cart"/>
 
     <item android:id="@+id/nav_order"
-          android:icon="@mipmap/ic_launcher"
+          android:icon="@drawable/order"
           android:title="Orders"/>
 
     <item android:id="@+id/nav_profile"
-          android:icon="@mipmap/ic_launcher"
+          android:icon="@drawable/profile"
           android:title="Profile"/>
 
 </menu>
