--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -18,21 +18,21 @@
         app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/acc" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="104dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Jayshah"
         android:gravity="center"
+        android:text="Jayshah"
+        android:textColor="#000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.194"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="6004170053"
+        android:text="8879796570"
         android:textColor="#000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,30 +86,6 @@
         app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="183dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="jayparthshah786@gmail.com"
-        android:textColor="#000"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-    <TextView
-
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email Id"
-        android:textColor="#000"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -118,7 +94,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
-        android:background="#726B68"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +102,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listgroup"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -142,7 +117,7 @@
 
 
             android:layout_height="match_parent"
-            android:src="@drawable/ic_launcher_background" />
+            android:src="@drawable/acc" />
 
         <TextView
             android:id="@+id/listtitle"
@@ -169,7 +144,7 @@ android:rotation="270"
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listgroup2"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -185,7 +160,7 @@ android:rotation="270"
 
 
             android:layout_height="match_parent"
-            android:src="@drawable/ic_launcher_background" />
+            android:src="@drawable/favoriteheartbutton" />
 
         <TextView
             android:id="@+id/listtitle2"
@@ -213,7 +188,7 @@ android:rotation="270"
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listgroup3"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -228,7 +203,7 @@ android:rotation="270"
 
 
             android:layout_height="match_parent"
-            android:src="@drawable/ic_launcher_background" />
+            android:src="@drawable/walle" />
 
         <TextView
             android:id="@+id/listtitle3"
@@ -257,10 +232,7 @@ android:rotation="270"
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
 
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="#ff33"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
