--- a/app/src/main/res/layout/newmenu.xml
+++ b/app/src/main/res/layout/newmenu.xml
@@ -10,11 +10,12 @@
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:scrollbars="none"
+        android:layout_height="130dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160sp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
@@ -24,10 +25,9 @@
             <android.support.v7.widget.CardView
 
 
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
-                android:layout_weight="1"
                 android:background="@mipmap/ic_launcher">
 
                 <RelativeLayout
@@ -47,33 +47,29 @@
                         android:layout_marginEnd="0dp"
                         android:layout_marginBottom="0dp"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/southindian" />
 
                     <TextView
+
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
                         android:text="SouthIndian"
                         android:textAlignment="center"
-                        android:textColor="#000"
+                        android:textColor="#fff"
                         android:textSize="20sp" />
                 </RelativeLayout>
 
 
             </android.support.v7.widget.CardView>
-
-
             <android.support.v7.widget.CardView
 
 
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
-                android:layout_weight="1"
                 android:background="@mipmap/ic_launcher">
 
                 <RelativeLayout
@@ -87,11 +83,13 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
                         android:layout_marginStart="0dp"
                         android:layout_marginTop="0dp"
                         android:layout_marginEnd="0dp"
+                        android:layout_marginBottom="0dp"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/chinese" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -99,25 +97,20 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:text="SouthIndian"
+                        android:text="Chinese"
                         android:textAlignment="center"
-                        android:textColor="#000"
+                        android:textColor="#fff"
                         android:textSize="20sp" />
                 </RelativeLayout>
 
 
             </android.support.v7.widget.CardView>
-
-
             <android.support.v7.widget.CardView
 
 
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
-                android:layout_weight="1"
                 android:background="@mipmap/ic_launcher">
 
                 <RelativeLayout
@@ -131,11 +124,13 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
                         android:layout_marginStart="0dp"
                         android:layout_marginTop="0dp"
                         android:layout_marginEnd="0dp"
+                        android:layout_marginBottom="0dp"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/chat" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -143,25 +138,20 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:text="SouthIndian"
+                        android:text="Chat"
                         android:textAlignment="center"
-                        android:textColor="#000"
+                        android:textColor="#fff"
                         android:textSize="20sp" />
                 </RelativeLayout>
 
 
             </android.support.v7.widget.CardView>
-
-
             <android.support.v7.widget.CardView
 
 
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
-                android:layout_weight="1"
                 android:background="@mipmap/ic_launcher">
 
                 <RelativeLayout
@@ -175,11 +165,13 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
                         android:layout_marginStart="0dp"
                         android:layout_marginTop="0dp"
                         android:layout_marginEnd="0dp"
+                        android:layout_marginBottom="0dp"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/roti" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -187,24 +179,20 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:text="SouthIndian"
+                        android:text="Indian"
                         android:textAlignment="center"
-                        android:textColor="#000"
+                        android:textColor="#fff"
                         android:textSize="20sp" />
                 </RelativeLayout>
 
 
             </android.support.v7.widget.CardView>
-
             <android.support.v7.widget.CardView
 
 
-                android:layout_width="0dp"
+                android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:layout_margin="4dp"
-                android:layout_weight="1"
                 android:background="@mipmap/ic_launcher">
 
                 <RelativeLayout
@@ -218,11 +206,13 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
                         android:layout_marginStart="0dp"
                         android:layout_marginTop="0dp"
                         android:layout_marginEnd="0dp"
+                        android:layout_marginBottom="0dp"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/desert" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -230,16 +220,15 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:text="SouthIndian"
+                        android:text="Desert"
                         android:textAlignment="center"
-                        android:textColor="#000"
+                        android:textColor="#fff"
                         android:textSize="20sp" />
                 </RelativeLayout>
 
 
             </android.support.v7.widget.CardView>
+
         </LinearLayout>
 
 
@@ -271,21 +260,21 @@ android:layout_marginRight="20dp"
 
 <ImageView
     android:layout_marginRight="10dp"
-    android:src="@drawable/ic_launcher_background"
+    android:src="@drawable/filter"
     android:layout_width="40dp"
-    android:padding="3dp"
+
+    android:padding="10dp"
     android:layout_gravity="end"
     android:layout_height="40dp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_menu"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
