solved errors of newmenu,mainactivity XMLS solved error mentioned in the photo added getmenu and responsemenu classes with constructors

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_nav"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/nav"
+        android:layout_gravity="start"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@color/bottom_nav_colors"
-        app:itemTextColor="@color/bottom_nav_colors"/>
+        app:itemTextColor="@color/bottom_nav_colors"
+        app:menu="@menu/nav" />
 
 
 </RelativeLayout>
