--- a/app/src/main/res/layout/newmenu.xml
+++ b/app/src/main/res/layout/newmenu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
 
-    android:background="#C0CCDA"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent"
+    android:background="#C0CCDA">
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
@@ -257,37 +257,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:layout_height="wrap_content">
-        <android.support.v7.widget.SearchView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="40sp"
-            app:queryHint="Search Food "
-android:layout_marginRight="20dp"
-            ></android.support.v7.widget.SearchView>
 
-<ImageView
-    android:layout_marginRight="10dp"
-    android:src="@drawable/ic_launcher_background"
-    android:layout_width="40dp"
-    android:padding="3dp"
-    android:layout_gravity="end"
-    android:layout_height="40dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.SearchView
+                android:layout_width="0dp"
+                android:layout_height="40sp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                app:queryHint="Search Food "></android.support.v7.widget.SearchView>
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="end"
+                android:layout_marginRight="10dp"
+                android:padding="3dp"
+                android:src="@drawable/ic_launcher_background" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="225dp"
         android:id="@+id/recycler_menu"
-        android:layout_marginStart="0dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"
+        app:layout_constraintVertical_bias="0.148" />
 
 </android.support.constraint.ConstraintLayout>
