--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#C0CCDA"
-    android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:background="#C0CCDA">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        android:orientation="vertical">
 
 
         <TextView
+            android:id="@+id/login_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="DJ Sanghvi"
             android:textAlignment="center"
             android:textColor="#000"
             android:textSize="36sp"
-            android:textStyle="italic"></TextView>
+            android:textStyle="italic"/>
 
         <ImageView
+            android:id="@+id/login_logo"
+            android:layout_below="@+id/login_header"
+            android:layout_centerHorizontal="true"
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_gravity="center_horizontal"
@@ -31,91 +30,106 @@
             android:src="@drawable/logo" />
 
         <TextView
+            android:id="@+id/login_title"
+            android:layout_below="@+id/login_logo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Canteen App"
             android:textAlignment="center"
             android:textColor="#000"
-
             android:textSize="20sp"
             android:textStyle="italic" />
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/login_card"
+            android:layout_below="@+id/login_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="18dp"
-            android:orientation="vertical">
+            android:layout_margin="15dp"
+            card_view:cardUseCompatPadding="true"
+            card_view:cardElevation="4dp"
+            card_view:cardCornerRadius="13dp"
+        >
 
-            <LinearLayout
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#fff"
-                android:orientation="horizontal">
+                android:background="#fff">
 
-                <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="28dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/email"
-                    android:tint="#000" />
-
-                <EditText
-
-                    android:id="@+id/emailtxt"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/login_layout_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
-                    android:hint=" Email"
-                    android:textColor="#000"
-                    android:textCursorDrawable="@null" />
-            </LinearLayout>
+                android:layout_margin="10dp"
+                android:layout_marginVertical="20dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#fff"
-                android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="28dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/locked"
-                    android:tint="#000" />
 
-                <EditText
-                    android:id="@+id/passwordtxt"
+                    <EditText
+                        android:id="@+id/emailtxt"
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint=" Email"
+                        android:inputType="textEmailAddress"
+                        android:drawableLeft="@drawable/icon_email"
+                        android:textColor="#000"/>
+
+
+                </android.support.design.widget.TextInputLayout>
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/login_layout_pass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
-                    android:hint=" Password"
-                    android:inputType="textPassword"
-                    android:textColor="#000"
-                    android:textCursorDrawable="@null" />
-            </LinearLayout>
+                    android:layout_below="@+id/login_layout_email"
+                android:layout_margin="10dp">
 
-            <Button
-                android:id="@+id/loginbtn"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="32dp"
-                android:background="@color/darkblue"
-                android:text="Login"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
+                    <EditText
+                        android:id="@+id/passwordtxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint=" Password"
+                        android:inputType="textPassword"
+                        android:drawableLeft="@drawable/icon_pass"
+                        android:textColor="#000"/>
 
+
+                </android.support.design.widget.TextInputLayout>
+
+
+                <Button
+                    android:id="@+id/loginbtn"
+                    android:layout_below="@+id/login_layout_pass"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@color/darkblue"
+                    android:text="Login"
+                    android:textColor="#ffffff"
+                    android:textSize="18sp"
                 />
+
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
-
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
                     android:text="Don't have an account ? "
@@ -136,6 +150,5 @@
                     />
             </LinearLayout>
 
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+
+</RelativeLayout>
