--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:padding="3dp">
+                android:padding="10dp"
+                android:elevation="30dp"
+                android:layout_marginVertical="13dp">
 
     <TextView
         android:layout_width="wrap_content"
