--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -2,16 +2,18 @@
 
 <!--wrap content and match parent doesn't work on this relative layout-->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:background="@color/myBackground">
 
 <!--this will be the single item in the list of previous orders-->
 
-    <android.support.v7.widget.CardView android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_margin="15dp">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                                    android:layout_marginHorizontal="15dp"
+                                    android:layout_marginVertical="10dp"
+                                    card_view:cardUseCompatPadding="true"
+                                    card_view:cardElevation="4dp"
+                                    card_view:cardCornerRadius="3dp">
 
         <RelativeLayout android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -26,10 +28,11 @@
 
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:id="@+id/time"
-                      android:layout_alignStart="@+id/date"
                       android:textSize="15sp"
-                      android:layout_below="@+id/date"
+                      android:layout_toRightOf="@+id/date"
+                      android:layout_alignBottom="@id/date"
                       android:text="11:30"
+                      android:layout_marginLeft="10dp"
 
             />
 
@@ -45,14 +48,15 @@
 
             />
 
-            <ListView android:layout_width="match_parent"
+            <io.github.djunicode.canteenapp.MyListView android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_below="@id/time"
-            android:id="@+id/list_previous">
+                      android:id="@+id/list_previous"
+                     android:divider="@null"
+                   android:dividerHeight="0dp"
+            >
 
-            </ListView>
+            </io.github.djunicode.canteenapp.MyListView>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
-
-</RelativeLayout>
