--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -124,6 +124,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"></LinearLayout>
 
+
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listgroup"
         android:layout_width="match_parent"
@@ -267,6 +269,10 @@ android:rotation="270"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+        <android.support.v7.widget.CardView
+            android:layout_width="368dp"
+            android:layout_height="wrap_content" tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="4dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
